# geopandas3d

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: demo_3d_features.py  demo_crs_transforms.py  demo_hnsw_optimization.py  demo_point3d.py
src/geopandas3d/: __init__.py  geodataframe3d.py  plotting.py  point3d.py  sindex.py  spatial_ops.pyx  utils.py
tests/: test_basic.py  test_hnsw_optimization.py  test_point3d.py
